--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Weather Dashboard</title>
+        <title>Weather Dashboard</title>
 </head>
 <body>
 
@@ -21,28 +21,36 @@ here's the bones: -->
     
     <header id="dashboard" class="dashboard">Weather Dashboard</header>
 
-<main id="weatherApp" class="container">
+<main id="weatherApp" class="container-fluid">
     <div class="row">
-        <aside class="searchCity col-3">
-            <h2>Search for a City:</h2>
-                <input type="text" placeholder="Austin" id="city" class="inputBox" aria-label="Search">
+        <aside class="searchCity col-4">
+            <form method="post">
+                <label for="searchInput">Search for a City:</label>
+                <input type="text" name="searchInput" placeholder="Austin" id="searchInput" class="inputBox" aria-label="Search">
                 <br>
-                <button type="submit" id="searchCity" class="searchButton">Search</button>
+                <button type="submit" id="searchBtn" class="searchButton">Search</button>
                 <br>
-            <container id="localStorage" class="localStorage">
-                <p>TEST</p>
+            </form>
+            <container class="pastResults">
+                <p>
+                    <span id="pastResults">TEST</span>
+                </p>
             </container>
         </aside>
 <!--Contains current and extended forecast-->
-        <section id="results" class="current col-9">
-            <h2>Current Weather</h2>
-            <container id="current"></container>
+        <section id="results" class="current col-8">
+            <div>
+                <h2>Current Weather</h2>
+                <p id="currentWeather"></p>
+                 </div>
 <!--Need 5 cols for extended forecast-->
-            <h3>5-Day Forecast</h3>
-            <container id="extendedForecast" class="extendedForecast 5 COLS GO HERE">TEST</container>
+            <div id="extendedForecast" class="extendedForecast row">
+                <h3>5-Day Forecast</h3>
+            </div>
         </section>
     </div>
 </main>
+
 
 
 
@@ -52,5 +60,13 @@ here's the bones: -->
 </body>
 </html>
 
-
-
+<!-- <div class="card" style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+    </div>
+</div> -->
